# kbunified

./: README.md  protocol.md  pyproject.toml
src/kbunified/: __about__.py  __init__.py
src/kbunified/backends/: __init__.py  dummy.py  interface.py  mattermost.py  rocketchat.py  slack.py
src/kbunified/data/: slack_emojis.json
src/kbunified/ui/: __init__.py
src/kbunified/utils/: rocketchat_auth.py  slack_auth.py
tests/: __init__.py  test_backend_api.py  test_slack_backend.py  test_ui_aiohttp.py  test_ui_api.py
