[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kbunified"
dynamic = ["version"]
description = 'KBUnified'
readme = "README.md"
requires-python = ">=3.8"
license = "GPLv3"
keywords = []
authors = [
  { name = "Martin Raspaud", email = "martin.raspaud@smhi.se" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Martin Raspaud/kbunified#readme"
Issues = "https://github.com/Martin Raspaud/kbunified/issues"
Source = "https://github.com/Martin Raspaud/kbunified"

[tool.hatch.version]
path = "src/kbunified/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/kbunified tests}"

[tool.coverage.run]
source_pkgs = ["kbunified", "tests"]
branch = true
parallel = true
omit = [
  "src/kbunified/__about__.py",
]

[tool.coverage.paths]
kbunified = ["src/kbunified", "*/kbunified/src/kbunified"]
tests = ["tests", "*/kbunified/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
