[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kbunified"
dynamic = ["version"]
description = 'KBUnified'
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-v2.0"
keywords = []
authors = [
  { name = "Martin Raspaud", email = "martin.raspaud@smhi.se" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "async-lru[slack]>=2.0.4",
    "importlib-resources[slack]>=6.5.2",
    "requests[mattermost]>=2.32.3",
    "truststore>=0.10.1",
    "websockets>=13.0",
]

[project.urls]
Documentation = "https://github.com/maspaud/kbunified#readme"
Issues = "https://github.com/mraspaud/kbunified/issues"
Source = "https://github.com/mraspaud/kbunified"

[project.optional-dependencies]
slack = [
    "aiohttp>=3.11.12",
    "truststore>=0.10.1",
    "async-lru>=2.0.4",
    "importlib-resources>=6.5.2",
    "keyring>=25.6.0",
]
rocket-chat = []
mattermost = [
    "aiohttp>=3.11.12",
    "browser-cookie3>=0.20.1",
    "requests>=2.32.3",
]

[tool.hatch.version]
path = "src/kbunified/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/kbunified tests}"

[tool.coverage.run]
source_pkgs = ["kbunified", "tests"]
branch = true
parallel = true
omit = [
  "src/kbunified/__about__.py",
]

[tool.coverage.paths]
kbunified = ["src/kbunified", "*/kbunified/src/kbunified"]
tests = ["tests", "*/kbunified/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# See https://docs.astral.sh/ruff/rules/
select = ["A", "B", "D", "E", "W", "F", "I", "N", "PT", "S", "TID", "C90", "Q", "T10", "T20"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # assert allowed in tests

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.uv.sources]
rocketchat-async = { path = "../../contrib/rocketchat-async", editable = true }

[dependency-groups]
dev = [
    "aioresponses>=0.7.8",
    "browser-cookie3>=0.20.1",
    "ldap3>=2.9.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "python-ldap>=3.4.4",
]
